--- a/style_task_card_overlay.css
+++ b/style_task_card_overlay.css
@@ -4,14 +4,14 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.2);
   z-index: 1000;
   display: flex;
   justify-content: center;
   align-items: center;
   opacity: 0;
   pointer-events: none;
-  transition: opacity 0.3s ease;
+  transition: opacity 0.5s ease;
 }
 
 #task-card-overlay.show {
@@ -19,13 +19,20 @@
   pointer-events: auto;
 }
 
+@keyframes slideIn {
+  from {
+    transform: translateX(300%);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
+
 .task-card {
   background: white;
   padding: 20px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   position: absolute;
-  top: 50%;
-  left: 50%;
   transform: translate(-50%, -50%);
   width: 525px;
   height: auto;
@@ -35,6 +42,8 @@
   padding-bottom: 48px;
   padding-left: 40px;
   gap: 24px;
+  animation: slideIn 0.3s ease forwards;
+
   strong {
     font-weight: 400;
     font-size: 20px;
