--- a/styles/contactSection/overlay_contacts.css
+++ b/styles/contactSection/overlay_contacts.css
@@ -40,14 +40,14 @@
 }
 
 .dark-background {
-  transition: opacity 0.3s ease-in-out;
+  transition: opacity 0.5s ease-in-out;
   display: none;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.77);
+  background-color: rgba(0, 0, 0, 0.2);
   z-index: 4;
 }
 .content-overlay-wrapper {
