--- a/styles/login.css
+++ b/styles/login.css
@@ -221,34 +221,35 @@ body {
     gap: 16px;
 }
 
-.login-form form input {
+.email-wrapper, .pw-wrapper {
     width: 422px;
     height: 48px;
     color: rgba(0, 0, 0, 0.3);
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 6px;
-}
-
-input#email {
-    background-image: url('../assets/svg/mail.svg');
-    background-size: 20px 16px;
-    background-repeat: no-repeat;
-    background-position: calc(100% - 20px) center;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     padding: 5px 16px;
 }
 
-input#email:hover,
-input#password:hover {
+
+.email-wrapper:hover,
+.pw-wrapper:hover {
     border-color: #007bff;
 }
 
-input#password {
-    background-image: url('../assets/svg/lock.svg');
-    background-size: 20px 16px;
-    background-repeat: no-repeat;
-    background-position: calc(100% - 20px) center;
-    padding: 5px 16px;
+.email-wrapper input,
+.pw-wrapper input {
+    width: 100%;
+    height: 100%;
+    border: none;
+    font-size: 1em;
+    outline: none;
+    padding: 0 16px 0 0;
 }
+
+
 
 .login-button-box {
     display: flex;
