--- a/styles/AddTaskSection/addtask.css
+++ b/styles/AddTaskSection/addtask.css
@@ -482,14 +482,17 @@ textarea {
 }
 
 .subtask-list {
+  position: relative;
   width: 100%;
   height: 64px;
-  border: 2px dashed #054483;
+  /* border: 2px dashed #054483; */
   overflow-y: auto;
   word-break: break-word;
+  top: -13%;
 }
 
 .subtask-item-field {
+  padding: 0 9px;
   border-radius: 5px;
   height: 32px;
   display: flex;
@@ -516,7 +519,7 @@ textarea {
   display: none;
   width: 100%;
   height: 64px;
-  border: 2px dashed #46a82e;
+  /* border: 2px dashed #46a82e; */
 }
 
 .edit-subtask-item-field {
@@ -527,11 +530,31 @@ textarea {
 }
 .edit-subtask-btns {
   position: relative;
-  top: -57%;
+  top: -56%;
   right: -87%;
+  img {
+    width: 24px;
+    height: 24px;
+  }
 }
 
 .edit-subtask-btns img:hover {
   cursor: pointer;
   scale: 1.1;
+}
+
+.subtask-edit-input {
+  position: relative !important;
+  top: -15% !important;
+  display: flex !important;
+  align-items: center !important;
+  font-size: 16px !important;
+  height: 32px !important;
+  border: none !important;
+  border-radius: 1px !important;
+  border-bottom: 1px solid #29abe2 !important;
+}
+
+.addTask-category {
+  padding-top: 16px;
 }
